<resources>
    <string name="app_name">AnytimeQiita</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_folder">フォルダ</string>
    <string name="title_stock">ストック</string>
    <string name="title_record">レコード</string>
    <string name="title_reading">リーディング</string>
    <string name="title_setting">セッティング</string>

    <!-- word -->
    <string name="reading_setting">■読む設定</string>
    <string name="stocks_setting">■ストック設定</string>

    <string name="login">ログイン</string>
    <string name="logout">ログアウト</string>
    <string name="login_success">ログインに成功しました</string>
    <string name="login_fail">ログインに失敗しました</string>
    <string name="message_add_folder">フォルダに追加しました</string>

    <string name="ok">OK</string>
    <string name="ng">NG</string>
    <string name="reading">読む</string>

    <string name="main_text">詳細はこちらから閲覧できます。</string>
    <string name="link_text">こちら</string>
    <string name="change_name">名前変更</string>
    <string name="word_delete_folder">フォルダ削除</string>
    <string name="word_register_folder">フォルダ登録</string>
    <string name="word_cancel">キャンセル</string>
    <string name="word_register">登録</string>
    <string name="word_yes">はい</string>
    <string name="word_no">いいえ</string>
    <string name="word_read_now">今すぐ読む</string>
    <string name="word_bar_y_formatted">%.0f分</string>
    <string name="word_spinner">spinner</string>
    <string name="word_reload">reload</string>
    <string name="word_go_to_top">go_to_top</string>

    <!-- message -->
    <string name="message_input_folder_name">フォルダ名を入力</string>
    <string name="message_can_i_delete_the_folder">フォルダを削除しても良いですか？</string>
    <string name="message_use_external_browser">外部ブラウザを使う</string>
    <string name="message_show_icon">アイコンを表示する</string>
    <string name="message_show_lgtm">LGTMを表示する</string>
    <string name="message_show_update_time">更新日時を表示する</string>
    <string name="message_load_stock_now">ストックデータをロード中です\nしばらくお待ちください</string>
    <string name="message_loaded_stocks_count">%1$s件 ダウンロード済み</string>


</resources>
