<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_navigation_record"
        android:icon="@drawable/ic_record"
        android:title="@string/title_record" />

    <item
        android:id="@+id/bottom_navigation_stocks"
        android:icon="@drawable/ic_stocks"
        android:title="@string/title_stock" />

    <item
        android:id="@+id/bottom_navigation_folder"
        android:icon="@drawable/ic_folder"
        android:title="@string/title_folder" />

    <item
        android:id="@+id/bottom_navigation_reading"
        android:icon="@drawable/ic_reading"
        android:title="@string/title_reading" />

    <item
        android:id="@+id/bottom_navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />
</menu>
